Fix articles color and dropdwon small menu

--- a/styles.css
+++ b/styles.css
@@ -140,12 +140,11 @@ nav {
     color: white;
     background-color: rgb(0, 0, 0);
     border-radius: 8px;
-    border: 1px white solid;
     position: absolute;
     left: 180px;
     bottom: -80px;
     z-index: 1;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .small-dropdown-nav>a{
